--- a/ch3.tex
+++ b/ch3.tex
@@ -3,11 +3,11 @@
 
 Generic anomaly detection methods operate on the full input and make binary predictions on whether a sample is anomalous. They do not, however, provide information about the input components that led to that assessment. It is often desirable to identify the specific regions within an image that are contributing to its atypicality. Such localization allows for increased model interpretability as well as directing future investigation. 
 
-For instance, in healthcare, the ability to interpret a model's prediction not only empowers medical practitioners to visually corroborate the identified regions of interest in diagnostic images but, also paves the way for novel insights into the disease. Furthermore, localizing anomalies enables targeted diagnosis and intervention planning based on the factors contributing to the detected outlier.
+For instance, in healthcare, the ability to interpret a model's prediction empowers medical practitioners to visually corroborate the identified regions of interest. Interpretation may also pave the way for novel insights into the disease. Furthermore, localizing anomalies enables targeted diagnosis and intervention planning based on the factors contributing to the detected outlier.
 
-Another area where anomaly detection has critical real-world value, is manufacturing~\cite{Bergmann_2019_CVPR}. Supply chain industries often need to automate defect identification to reduce operational costs and time requirements. This is typically accomplished through image-based anomaly detection. As the type of defects that can emerge in production are unknown, these systems utilize unsupervised models to enable broad detection. Additionally,  the models are tasked to output pixel-level segmentations to help manufacturers design solutions to remediate the defects. Although many unsupervised anomaly localization methods have been proposed in recent years, it still remains an active area of research~\cite{liu2024deep}. 
+Another industry where anomaly detection has critical real-world value, is manufacturing~\cite{Bergmann_2019_CVPR}. Supply chain industries often need to automate defect identification to reduce operational costs and time requirements. This is typically accomplished through image-based anomaly detection. As the type of defects that can emerge in production are unknown, these systems utilize unsupervised models to enable broad detection. Additionally,  the models are tasked to output pixel-level segmentations to help manufacturers design solutions to remediate the defects. Although many unsupervised anomaly localization methods have been proposed in recent years, it still remains an active area of research~\cite{liu2024deep}. 
 
-This chapter will introduce Spatial-MSMA: an extended version of MSMA with localization capabilities. Note that the benefits of localization are twofold. First, it allows the possibility of detecting physical anomalies. For example, Spatial-MSMA has the capabilities of highlighting brain regions with lesions even though it was never trained int he absence of labeled data. Second, localization enables exploratory insights, gained through the interpretation of heatmaps. The two benefits are orthogonal with respect to one another and significantly expand the use-case for MSMA.
+This chapter will introduce Spatial-MSMA: an extended version of MSMA with localization capabilities. Note that the benefits of localization are twofold. First, it allows the possibility of detecting physical anomalies. For example, Spatial-MSMA has the capabilities of highlighting brain regions with lesions even though it was never trained with labeled data. Second, localization enables exploratory insights, gained through the interpretation of heatmaps. The two benefits are orthogonal with respect to one another and significantly expand the use-case for MSMA.
 
 \section{Existing Techniques for Anomaly Localization}
 
@@ -67,8 +67,10 @@ For this experiment, the score model was trained on the \textit{Cables} class. T
 \section{Case Study: Lesion Detection in Volumetric Brain MRIs}
 Following the encouraging results on the MvTec dataset, this section will consider the more challenging task of detecting anomalies in medical images. The purpose of this case study is to reflect a real world usecase: automatic detection and segmentation of pathologies. As this is a feasibility experiment, one needs to minimize confounding factors that can be introduced due to a distributional shift between the training and testing populations. Thus, the anomalies will be simulated on a held out inlier test set, ensuring that the introduced anomalies are the \textit{primary} factor differentiating the test set from the inlier population.
 
-\subsection{Experiment Details}
+\subsection*{Experiment Details}
 The model is trained on a population of typically developing adolescent brains, retrieved from the ABCD study~\cite{Casey2018adolescent}. We use both T1-weigthed and T2-weighted images. The images were downsampled to a pixel spacing of 2, cropped by the largest brain mask with some additional padding. The resulting 3D volume is of size 96x112x80. The anomalies were simulated using lesion simulator tool~\cite{Filho_2019}, available as the MSLesionSimulator extension~\footnote{https://www.slicer.org/wiki/Documentation/Nightly/Modules/MSLesionSimulator} of the Slicer3D software package~\cite{fedorov3DSlicerImage2012}. The lesion load parameter was set to 20 and the rest of the hyperparameters were kept at their default values. A post processing step was performed to enhance the lesion intensity by a factor of $1.5$.
+
+The score-norms were retrieved from a diffusion model, using a 3D convolutional UNet-like architecture. I used the VESDE formulation, with 1000 timesteps. The minimum sigma was set to <MIN> and the maximum was computed from the maximum pairwise distance in the trianing set <MAX>. The model was trained for 1.5 million iterations. The batch size was doubled at roughly the half way point during training. This is a simple yet effective method proposed by~\cite{le2018dont}, to effectively anneal the learning rate without having to use a decay schedule. The authors also found that increasing the batch size also reduced the number of parameter updates required to reach the same test accuracies as the learning rate decay setting.
 
 During inference, the voxel-wise anomaly scores are first brain masked followed by thresholding. The threshold is determined for each sample by searching for the threshold that gives the lowest symmetric mean surface distance between the ground truth and the post-threshold segmentation. Searching for a threshold like this is common practice in evaluating anomaly detectors~\cite{baur_deep_2019}. The segmentations are post-processed by removing connected components of size less than 3 voxels (using a connectivity of 1). The remaining segmentation mask is dilated via a disk of radius 1 as the structuring element. Note that this inference procedure is performed for all methods tested in the experiment.
 
@@ -77,7 +79,7 @@ During inference, the voxel-wise anomaly scores are first brain masked followed 
 Spatial-MSMA was compared to a selection of models that encompass a broad range of anomaly detection methodologies that have been successfully used in the medical imaging field. Namely, the baselines represent reconstruction-based, generative-based, and interpretation-based methods.
 % mention why feature embedding not present..?
 
-For the reconstruction-based baseline, I chose an autoencoder model~\cite{aelu2023} model owing to its success on volumetric brain MRIs. The model uses a ResNet-like architecture is trained using a reconstruction objective based on a Mean Squared Error (MSE). The authors also provide a publicly available implementation. This method is denoted as AE in Table~\ref{lesion_results}.
+For the reconstruction-based baseline, I chose an autoencoder model by~\cite{aelu2023} owing to its success on volumetric brain MRIs. The model uses a ResNet-like architecture is trained using a reconstruction objective based on a Mean Squared Error (MSE). The authors also provide a publicly available implementation. This method is denoted as AE in Table~\ref{lesion_results}.
 
 Two generative-model based approaches were also included in the comparison. First is an imputation-based approach inspired by~\cite{liuUnsupervisedOutofDistributionDetection2023} which uses a checkerboard mask to in-paint different regions of the image (denoted as Inpaint in Table~\ref{lesion_results}). This method performs multiple runs of imputation, alternating the checkerboard pattern each time and computing the average error across all runs. Second is a restoration-based approach (denoted as Restoration in Table~\ref{lesion_results}), which first adds noise to the image and then invokes the sampling procedure of the diffusion model to iteratively generate the restored counterpart. Following~\cite{wyattAnoddpmAnomalyDetection2022}, the sampling procedure was initiated from 1/4th of the original timesteps. However, unlike~\cite{wyattAnoddpmAnomalyDetection2022}, I did not use Simplex noise during training/inference as recent research has shown that it may not be necessary (and sometimes detrimental)~\cite{kascenas2023}. 
 
