--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,44 @@
+@article{ROLLS2020116189,
+title = {Automated anatomical labelling atlas 3},
+journal = {NeuroImage},
+volume = {206},
+pages = {116189},
+year = {2020},
+issn = {1053-8119},
+doi = {https://doi.org/10.1016/j.neuroimage.2019.116189},
+url = {https://www.sciencedirect.com/science/article/pii/S1053811919307803},
+author = {Edmund T. Rolls and Chu-Chung Huang and Ching-Po Lin and Jianfeng Feng and Marc Joliot},
+keywords = {AAL3, Automated anatomical labelling 3, AAL, AAL2, Human brain, Orbitofrontal cortex, Cingulate cortex, Thalamus, Substantia nigra},
+}
+
+@inproceedings{
+le2018dont,
+title={Don't Decay the Learning Rate, Increase the Batch Size},
+author={Samuel L. Smith and Pieter-Jan Kindermans and Quoc V. Le},
+booktitle={International Conference on Learning Representations},
+year={2018},
+url={https://openreview.net/forum?id=B1Yy1BxCZ},
+}
+
+@article{suji2023survey,
+  title={A survey and taxonomy of 2.5 D approaches for lung segmentation and nodule detection in CT images},
+  author={Suji, R Jenkin and Bhadauria, Sarita Singh and Godfrey, W Wilfred},
+  journal={Computers in Biology and Medicine},
+  pages={107437},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{reynolds2009gaussian,
+  title={Gaussian mixture models.},
+  author={Reynolds, Douglas A and others},
+  journal={Encyclopedia of biometrics},
+  volume={741},
+  number={659-663},
+  year={2009},
+  publisher={Berlin, Springer}
+}
+
 @InProceedings{pmlr-dose,
   title = 	 { Density of States Estimation for Out of Distribution Detection },
   author =       {Morningstar, Warren and Ham, Cusuh and Gallagher, Andrew and Lakshminarayanan, Balaji and Alemi, Alex and Dillon, Joshua},
